# synth

./: README.md  pubspec.yaml
android/: .gitignore
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  jniBridge.cpp
android/app/src/main/cpp/buukSynth/: Envelope.cpp  Envelope.h  Oscillator.cpp  Oscillator.h  Synth.cpp  Synth.h  Waveform.cpp  Waveform.h  WaveformUtils.h
android/app/src/main/kotlin/com/example/synth/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: keyboard.dart  main.dart  note_button.dart
lib/model/: midi.dart  midiPlatform.dart
test/: widget_test.dart
